--- a/3-multicontainer.yaml
+++ b/3-multicontainer.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mutli-container
+  name: multi-container
   labels:
-    purpose: mutli-container
+    purpose: multi-container
 spec:
   containers:
   - name: nginx
