--- a/volumes/01-staticprob.yaml
+++ b/volumes/01-staticprob.yaml
@@ -40,7 +40,7 @@ metadata:
 spec:
   containers:
   - name: nginx
-    image: nginx:latest
+    image: nginx:1-trixie-perl
     volumeMounts:
     - name: nginx-html
       mountPath: /usr/share/nginx/html
